--- a/example/package.json
+++ b/example/package.json
@@ -1,63 +1,47 @@
 {
-    "name": "angular-webpack-workflow",
-    "version": "1.1.0",
-    "description": "A workflow for Angular made with Webpack",
-    "scripts": {
-        "build": "webpack --bail --progress --profile",
-        "server": "webpack-dev-server --history-api-fallback --inline --progress",
-        "test": "karma start",
-        "test-watch": "karma start --auto-watch --no-single-run",
-        "start": "npm run server"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/preboot/angularjs-webpack.git"
-    },
-    "author": "Jesus Rodriguez",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/preboot/angularjs-webpack/issues"
-    },
-    "homepage": "https://github.com/preboot/angularjs-webpack",
-    "dependencies": {
-        "angular": "^1.7.0",
-        "angular-animate": "^1.7.9",
-        "angular-aria": "^1.7.9",
-        "angular-material": "^1.1.21",
-        "angular-messages": "^1.7.9",
-        "angular-ui-router": "^1.0.25",
-        "bootstrap": "^4.4.1",
-        "thailand-address": "^1.0.2"
-    },
-    "devDependencies": {
-        "ajv": "^6.4.0",
-        "angular-mocks": "^1.7.0",
-        "autoprefixer": "^8.4.1",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.4",
-        "babel-preset-es2015": "^6.1.18",
-        "clean-webpack-plugin": "^2.0.2",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.4.2",
-        "extract-text-webpack-plugin": "2.0.0-beta.5",
-        "file-loader": "^1.1.11",
-        "html-webpack-plugin": "^3.2.0",
-        "istanbul-instrumenter-loader": "^3.0.1",
-        "jasmine-core": "^3.1.0",
-        "karma": "^4.4.1",
-        "karma-coverage": "^1.0.0",
-        "karma-jasmine": "^1.0.2",
-        "karma-phantomjs-launcher": "^1.0.0",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "^0.0.32",
-        "karma-webpack": "^3.0.0",
-        "node-libs-browser": "^2.1.0",
-        "null-loader": "^0.1.1",
-        "phantomjs-prebuilt": "^2.1.4",
-        "postcss-loader": "^2.1.5",
-        "raw-loader": "^0.5.1",
-        "style-loader": "^0.21.0",
-        "webpack": "^2.7.0",
-        "webpack-dev-server": "^2.11.2"
-    }
+  "name": "example",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~9.0.1",
+    "@angular/common": "~9.0.1",
+    "@angular/compiler": "~9.0.1",
+    "@angular/core": "~9.0.1",
+    "@angular/forms": "~9.0.1",
+    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser-dynamic": "~9.0.1",
+    "@angular/router": "~9.0.1",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
+  }
 }
