--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,7 @@
         "angular": "^1.7.0",
         "angular-animate": "^1.7.9",
         "angular-aria": "^1.7.9",
+        "angular-cookies": "^1.7.9",
         "angular-material": "^1.1.21",
         "angular-messages": "^1.7.9",
         "angular-ui-router": "^1.0.25",
