--- a/example/package.json
+++ b/example/package.json
@@ -27,6 +27,7 @@
         "angular-material": "^1.1.21",
         "angular-messages": "^1.7.9",
         "angular-ui-router": "^1.0.25",
+        "angularjs-thailand-address": "^1.0.1",
         "bootstrap": "^4.4.1",
         "thailand-address": "^1.0.2"
     },
