--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,7 @@
 {
     "name": "angularjs-thailand-address",
     "version": "1.0.1",
-    "description": "Native Jquery.Thailand.Js for use in Angularjs",
+    "description": "Native jquery.Thailand.js for use in Angularjs",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
