change JavaScript to TypeScript

--- a/example/package.json
+++ b/example/package.json
@@ -1,65 +1,82 @@
 {
-    "name": "angular-webpack-workflow",
-    "version": "1.1.0",
-    "description": "A workflow for Angular made with Webpack",
+    "name": "angularjs-webpack-starter",
+    "version": "0.0.1",
+    "description": "An example application demonstrating modern AngularJS development using TypeScript & WebPack.",
+    "main": "index.js",
     "scripts": {
-        "build": "webpack --bail --progress --profile",
-        "server": "webpack-dev-server --history-api-fallback --inline --progress",
-        "test": "karma start",
-        "test-watch": "karma start --auto-watch --no-single-run",
-        "start": "npm run server"
+        "build": "npm run build:dev",
+        "prebuild:dev": "npm run clean:dev",
+        "build:dev": "webpack --config webpack-dev.config.js",
+        "prebuild:prd": "npm run clean:prd",
+        "build:prd": "webpack --config webpack-prd.config.js",
+        "clean:dev": "rimraf .tmp",
+        "clean:prd": "rimraf public",
+        "start": "npm run serve:dev",
+        "serve:dev": "webpack-dev-server --config webpack-dev.config.js",
+        "preserve:prd": "npm run build:prd",
+        "serve:prd": "http-server",
+        "test": "karma start karma.config.js",
+        "test:coverage": "remap-istanbul -i build/coverage/coverage.json -o build/coverage/report -t html",
+        "test:coveralls": "remap-istanbul -i build/coverage/coverage.json -o build/coverage/lcov.info -t lcovonly",
+        "test:coveralls:push": "cat ./build/coverage/lcov.info | ./node_modules/.bin/coveralls"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/preboot/angularjs-webpack.git"
-    },
-    "author": "Jesus Rodriguez",
+    "keywords": [
+        "AngularJS",
+        "TypeScript",
+        "WebPack",
+        "NPM"
+    ],
+    "author": "Frederik Prijck <frederik.prijck@gmail.com>",
     "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/preboot/angularjs-webpack/issues"
+    "devDependencies": {
+        "@types/angular": "^1.6.57",
+        "@types/angular-mocks": "^1.7.0",
+        "@types/angular-ui-router": "^1.1.40",
+        "@types/core-js": "^2.5.2",
+        "@types/jasmine": "^3.5.0",
+        "@types/node": "^13.5.1",
+        "@types/webpack-env": "^1.13.6",
+        "angular-mocks": "^1.7.9",
+        "awesome-typescript-loader": "^5.2.1",
+        "core-js": "^3.6.4",
+        "coveralls": "^3.0.9",
+        "css-loader": "^3.4.2",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^5.0.2",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
+        "http-server": "^0.12.1",
+        "istanbul-instrumenter-loader": "^3.0.1",
+        "jasmine-core": "^3.5.0",
+        "karma": "^4.4.1",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-coverage": "^2.0.1",
+        "karma-jasmine": "^3.1.0",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^4.0.2",
+        "ng-annotate-loader": "^0.6.1",
+        "node-sass": "^4.13.1",
+        "remap-istanbul": "^0.13.0",
+        "rimraf": "^3.0.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.2",
+        "tslint": "^5.20.1",
+        "tslint-loader": "^3.6.0",
+        "typescript": "^3.1.3",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10",
+        "webpack-dev-server": "^3.10.1",
+        "webpack-merge": "^4.2.2"
     },
-    "homepage": "https://github.com/preboot/angularjs-webpack",
     "dependencies": {
-        "angular": "^1.7.0",
+        "@uirouter/angularjs": "1.0.21",
+        "angular": "^1.7.9",
         "angular-animate": "^1.7.9",
         "angular-aria": "^1.7.9",
-        "angular-cookies": "^1.7.9",
         "angular-material": "^1.1.21",
         "angular-messages": "^1.7.9",
-        "angular-ui-router": "^1.0.25",
-        "angularjs-thailand-address": "^1.0.1",
-        "bootstrap": "^4.4.1",
-        "thailand-address": "^1.0.2"
-    },
-    "devDependencies": {
-        "ajv": "^6.4.0",
-        "angular-mocks": "^1.7.0",
-        "autoprefixer": "^8.4.1",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^7.1.4",
-        "babel-preset-es2015": "^6.1.18",
-        "clean-webpack-plugin": "^2.0.2",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.4.2",
-        "extract-text-webpack-plugin": "2.0.0-beta.5",
-        "file-loader": "^1.1.11",
-        "html-webpack-plugin": "^3.2.0",
-        "istanbul-instrumenter-loader": "^3.0.1",
-        "jasmine-core": "^3.1.0",
-        "karma": "^4.4.1",
-        "karma-coverage": "^1.0.0",
-        "karma-jasmine": "^1.0.2",
-        "karma-phantomjs-launcher": "^1.0.0",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "^0.0.32",
-        "karma-webpack": "^3.0.0",
-        "node-libs-browser": "^2.1.0",
-        "null-loader": "^0.1.1",
-        "phantomjs-prebuilt": "^2.1.4",
-        "postcss-loader": "^2.1.5",
-        "raw-loader": "^0.5.1",
-        "style-loader": "^0.21.0",
-        "webpack": "^2.7.0",
-        "webpack-dev-server": "^2.11.2"
+        "bootstrap": "^4.4.1"
     }
 }
