--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,25 +1,7 @@
-/build/
-/deploy/
-/benchpress-build/
-.DS_Store
-gen_docs.disable
-test.disable
-regression/temp*.html
-performance/temp*.html
-.idea/workspace.xml
-*~
-*.swp
-angular.js.tmproj
-node_modules/
-angular.xcodeproj
-.firebase/
 .idea
-*.iml
-.agignore
-.lvimrc
-libpeerconnection.log
-npm-debug.log
-/tmp/
+.npmrc
+.tmp
 .vscode
-*.log
-*.stackdump
+build
+node_modules
+public
