--- a/example/.gitignore
+++ b/example/.gitignore
@@ -1,25 +1,3 @@
-/build/
-/deploy/
-/benchpress-build/
-.DS_Store
-gen_docs.disable
-test.disable
-regression/temp*.html
-performance/temp*.html
-.idea/workspace.xml
-*~
-*.swp
-angular.js.tmproj
-node_modules/
-angular.xcodeproj
-.firebase/
-.idea
-*.iml
-.agignore
-.lvimrc
-libpeerconnection.log
-npm-debug.log
-/tmp/
-.vscode
-*.log
-*.stackdump
+node_modules
+dist
+coverage
