--- a/example/package.json
+++ b/example/package.json
@@ -28,8 +28,7 @@
         "angular-messages": "^1.7.9",
         "angular-ui-router": "^1.0.25",
         "angularjs-thailand-address": "^1.0.1",
-        "bootstrap": "^4.4.1",
-        "thailand-address": "^1.0.2"
+        "bootstrap": "^4.4.1"
     },
     "devDependencies": {
         "ajv": "^6.4.0",
@@ -39,14 +38,14 @@
         "babel-loader": "^7.1.4",
         "babel-preset-es2015": "^6.1.18",
         "clean-webpack-plugin": "^2.0.2",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.4.2",
+        "copy-webpack-plugin": "^4.5.1",
+        "css-loader": "^0.28.11",
         "extract-text-webpack-plugin": "2.0.0-beta.5",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "istanbul-instrumenter-loader": "^3.0.1",
         "jasmine-core": "^3.1.0",
-        "karma": "^4.4.1",
+        "karma": "^2.0.2",
         "karma-coverage": "^1.0.0",
         "karma-jasmine": "^1.0.2",
         "karma-phantomjs-launcher": "^1.0.0",
