--- a/example/package.json
+++ b/example/package.json
@@ -29,7 +29,11 @@
         "angular-ui-router": "^1.0.25",
         "angularjs-thailand-address": "^1.0.3",
         "bootstrap": "^4.4.1",
-        "jquery": "^3.4.1"
+        "corejs-typeahead": "1.1.1",
+        "jqljs": "^0.3.2",
+        "jquery": "^3.4.1",
+        "jthailand": "^1.0.0",
+        "popper.js": "^1.16.1"
     },
     "devDependencies": {
         "ajv": "^6.4.0",
