--- a/example/package.json
+++ b/example/package.json
@@ -27,8 +27,9 @@
         "angular-material": "^1.1.21",
         "angular-messages": "^1.7.9",
         "angular-ui-router": "^1.0.25",
-        "angularjs-thailand-address": "^1.0.3",
+        "angularjs-thailand-address": "^1.0.4",
         "bootstrap": "^4.4.1",
+        "corejs-typeahead": "^1.3.0",
         "jqljs": "^0.3.2",
         "jquery": "^3.4.1",
         "jthailand": "^1.0.0",
